crates/guatiao/include/guatiao.h


typedef struct guatiao_entry guatiao_entry;
typedef enum guatiao_status guatiao_status;
typedef uint32_t guatiao_status;
typedef enum guatiao_tag guatiao_tag;
typedef uint32_t guatiao_tag;
typedef struct guatiao_registry guatiao_registry;
typedef struct guatiao_str {
  const uint8_t *ptr;
  size_t len;
} guatiao_str;
typedef struct guatiao_alloc {
  uint32_t struct_size;
  void *ctx;
  void *(*alloc)(void *ctx, size_t size, size_t align);
  void (*free)(void *ctx, void *ptr, size_t size, size_t align);
  void (*release)(void *ctx);
} guatiao_alloc;
typedef struct guatiao_string {
  uint8_t *ptr;
  size_t len;
  size_t cap;
  const struct guatiao_alloc *alloc;
} guatiao_string;
typedef struct guatiao_buffer {
  uint8_t *ptr;
  size_t len;
  size_t cap;
  const struct guatiao_alloc *alloc;
} guatiao_buffer;
typedef struct guatiao_list {
  struct guatiao_value *ptr;
  size_t len;
  size_t cap;
  const struct guatiao_alloc *alloc;
} guatiao_list;
typedef struct guatiao_map {
  guatiao_entry *ptr;
  size_t len;
  size_t cap;
  const struct guatiao_alloc *alloc;
} guatiao_map;
typedef union guatiao_payload {
  uint8_t b;
  struct guatiao_string text;
  struct guatiao_buffer bytes;
  struct guatiao_list list;
  struct guatiao_map map;
} guatiao_payload;
typedef struct guatiao_value {
  uint32_t tag;
  uint32_t _pad;
  union guatiao_payload payload;
} guatiao_value;
typedef struct guatiao_provider_error {
  guatiao_status status;
  struct guatiao_string message;
} guatiao_provider_error;
typedef const struct guatiao_map *guatiao_map_ptr;
typedef struct guatiao_kinds {
  const struct guatiao_str *ptr;
  size_t len;
} guatiao_kinds;
typedef struct guatiao_kind_table {
  uint32_t struct_size;
  uint32_t vtable_size;
  struct guatiao_str kind;
  const void *vtable;
} guatiao_kind_table;
typedef struct guatiao_kind_tables {
  const struct guatiao_kind_table *ptr;
  size_t len;
  size_t stride;
} guatiao_kind_tables;
typedef struct guatiao_provider_info {
  uint32_t struct_size;
  uint32_t vtable_size;
  struct guatiao_kinds kinds;
  struct guatiao_str id;
  struct guatiao_str display_name;
  const struct guatiao_value *config;
  const void *vtable;
  void *ctx;
  guatiao_map_ptr meta;
  struct guatiao_str version;
  bool (*available)(void *ctx, struct guatiao_str *reason);
  struct guatiao_kind_tables tables;
  guatiao_status (*create)(void *ctx,
                           const struct guatiao_value *config,
                           void **out,
                           struct guatiao_provider_error *err);
  void (*destroy)(void *ctx, void *instance);
} guatiao_provider_info;
typedef struct guatiao_host_services {
  uint32_t struct_size;
  void *ctx;
  guatiao_status (*get)(void *ctx, struct guatiao_str key, const struct guatiao_provider_info **out);
  guatiao_status (*list)(void *ctx,
                         struct guatiao_str kind,
                         const struct guatiao_provider_info **out,
                         size_t cap,
                         size_t *total);
  const struct guatiao_alloc *(*alloc)(void *ctx);
} guatiao_host_services;
typedef struct guatiao_host_info {
  uint32_t struct_size;
  uint32_t abi_version;
  struct guatiao_str host_id;
  struct guatiao_str host_version;
  const struct guatiao_alloc *alloc;
  guatiao_map_ptr meta;
  const struct guatiao_host_services *services;
} guatiao_host_info;
typedef struct guatiao_providers {
  const struct guatiao_provider_info *ptr;
  size_t len;
  size_t stride;
} guatiao_providers;
typedef struct guatiao_library_info {
  uint32_t struct_size;
  uint32_t abi_version;
  struct guatiao_str id;
  struct guatiao_str version;
  struct guatiao_providers providers;
  guatiao_map_ptr meta;
  guatiao_status (*unload)(void);
} guatiao_library_info;
typedef struct guatiao_merge_override {
  struct guatiao_str path;
  uint32_t mode;
} guatiao_merge_override;
typedef struct guatiao_bytes {
  const uint8_t *ptr;
  size_t len;
} guatiao_bytes;
typedef struct guatiao_entries {
  const guatiao_entry *ptr;
  size_t len;
} guatiao_entries;
typedef struct guatiao_kind_header {
  uint32_t struct_size;
  uint32_t floor_hash;
} guatiao_kind_header;
typedef struct guatiao_object {
  const void *table;
  size_t size;
  void *ctx;
} guatiao_object;
typedef struct guatiao_bytes_mut {
  uint8_t *ptr;
  size_t len;
} guatiao_bytes_mut;
struct guatiao_entry {
  guatiao_string key;
  guatiao_value value;
};