bindings/dart/lib/src/bindings.g.dart


  static ffi.Pointer<guatiao_buffer> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> ptr,
    required int len,
    required int cap,
    required ffi.Pointer<guatiao_alloc> alloc,
  }) =>
      $allocator<guatiao_buffer>()
        ..ref.ptr = ptr
        ..ref.len = len
        ..ref.cap = cap
        ..ref.alloc = alloc;
}

final class guatiao_bytes extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Size()
  external int len;

  static ffi.Pointer<guatiao_bytes> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> ptr,
    required int len,
  }) =>
      $allocator<guatiao_bytes>()
        ..ref.ptr = ptr
        ..ref.len = len;
}

final class guatiao_bytes_mut extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Size()
  external int len;

  static ffi.Pointer<guatiao_bytes_mut> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> ptr,
    required int len,
  }) =>
      $allocator<guatiao_bytes_mut>()
        ..ref.ptr = ptr
        ..ref.len = len;
}

final class guatiao_entries extends ffi.Struct {
  external ffi.Pointer<guatiao_entry> ptr;

  @ffi.Size()
  external int len;

  static ffi.Pointer<guatiao_entries> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<guatiao_entry> ptr,
    required int len,
  }) =>
      $allocator<guatiao_entries>()
        ..ref.ptr = ptr
        ..ref.len = len;
}

final class guatiao_entry extends ffi.Struct {
  external guatiao_string key;

  external guatiao_value value;
}

final class guatiao_host_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  external guatiao_str host_id;

  external guatiao_str host_version;

  external ffi.Pointer<guatiao_alloc> alloc;

  external guatiao_map_ptr meta;

  external ffi.Pointer<guatiao_host_services> services;
}

final class guatiao_host_services extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  external ffi.Pointer<ffi.Void> ctx;

  external ffi.Pointer<
      ffi.NativeFunction<
          guatiao_status$1 Function(ffi.Pointer<ffi.Void> ctx, guatiao_str key,
              ffi.Pointer<ffi.Pointer<guatiao_provider_info>> out)>> get;

  external ffi.Pointer<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<ffi.Void> ctx,
              guatiao_str kind,
              ffi.Pointer<ffi.Pointer<guatiao_provider_info>> out,
              ffi.Size cap,
              ffi.Pointer<ffi.Size> total)>> list;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Pointer<guatiao_alloc> Function(ffi.Pointer<ffi.Void> ctx)>>
      alloc;

  static ffi.Pointer<guatiao_host_services> $allocate(
    ffi.Allocator $allocator, {
    required int struct_size,
    required ffi.Pointer<ffi.Void> ctx,
    required ffi.Pointer<
            ffi.NativeFunction<
                guatiao_status$1 Function(
                    ffi.Pointer<ffi.Void> ctx,
                    guatiao_str key,
                    ffi.Pointer<ffi.Pointer<guatiao_provider_info>> out)>>
        get,
    required ffi.Pointer<
            ffi.NativeFunction<
                guatiao_status$1 Function(
                    ffi.Pointer<ffi.Void> ctx,
                    guatiao_str kind,
                    ffi.Pointer<ffi.Pointer<guatiao_provider_info>> out,
                    ffi.Size cap,
                    ffi.Pointer<ffi.Size> total)>>
        list,
    required ffi.Pointer<
            ffi.NativeFunction<
                ffi.Pointer<guatiao_alloc> Function(ffi.Pointer<ffi.Void> ctx)>>
        alloc,
  }) =>
      $allocator<guatiao_host_services>()
        ..ref.struct_size = struct_size
        ..ref.ctx = ctx
        ..ref.get = get
        ..ref.list = list
        ..ref.alloc = alloc;
}

final class guatiao_kind_header extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int floor_hash;

  static ffi.Pointer<guatiao_kind_header> $allocate(
    ffi.Allocator $allocator, {
    required int struct_size,
    required int floor_hash,
  }) =>
      $allocator<guatiao_kind_header>()
        ..ref.struct_size = struct_size
        ..ref.floor_hash = floor_hash;
}

final class guatiao_kind_table extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int vtable_size;

  external guatiao_str kind;

  external ffi.Pointer<ffi.Void> vtable;
}

final class guatiao_kind_tables extends ffi.Struct {
  external ffi.Pointer<guatiao_kind_table> ptr;

  @ffi.Size()
  external int len;

  @ffi.Size()
  external int stride;

  static ffi.Pointer<guatiao_kind_tables> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<guatiao_kind_table> ptr,
    required int len,
    required int stride,
  }) =>
      $allocator<guatiao_kind_tables>()
        ..ref.ptr = ptr
        ..ref.len = len
        ..ref.stride = stride;
}

final class guatiao_kinds extends ffi.Struct {
  external ffi.Pointer<guatiao_str> ptr;

  @ffi.Size()
  external int len;

  static ffi.Pointer<guatiao_kinds> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<guatiao_str> ptr,
    required int len,
  }) =>
      $allocator<guatiao_kinds>()
        ..ref.ptr = ptr
        ..ref.len = len;
}

final class guatiao_library_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  external guatiao_str id;

  external guatiao_str version;

  external guatiao_providers providers;

  external guatiao_map_ptr meta;

  external ffi.Pointer<ffi.NativeFunction<guatiao_status$1 Function()>> unload;
}

final class guatiao_list extends ffi.Struct {
  external ffi.Pointer<guatiao_value> ptr;

  @ffi.Size()
  external int len;

  @ffi.Size()
  external int cap;

  external ffi.Pointer<guatiao_alloc> alloc;

  static ffi.Pointer<guatiao_list> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<guatiao_value> ptr,
    required int len,
    required int cap,
    required ffi.Pointer<guatiao_alloc> alloc,
  }) =>
      $allocator<guatiao_list>()
        ..ref.ptr = ptr
        ..ref.len = len
        ..ref.cap = cap
        ..ref.alloc = alloc;
}

final class guatiao_map extends ffi.Struct {
  external ffi.Pointer<guatiao_entry> ptr;

  @ffi.Size()
  external int len;

  @ffi.Size()
  external int cap;

  external ffi.Pointer<guatiao_alloc> alloc;

  static ffi.Pointer<guatiao_map> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<guatiao_entry> ptr,
    required int len,
    required int cap,
    required ffi.Pointer<guatiao_alloc> alloc,
  }) =>
      $allocator<guatiao_map>()
        ..ref.ptr = ptr
        ..ref.len = len
        ..ref.cap = cap
        ..ref.alloc = alloc;
}

typedef guatiao_map_ptr = ffi.Pointer<guatiao_map>;

final class guatiao_merge_override extends ffi.Struct {
  external guatiao_str path;

  @ffi.Uint32()
  external int mode;
}

typedef guatiao_number = guatiao_string;

final class guatiao_object extends ffi.Struct {
  external ffi.Pointer<ffi.Void> table;

  @ffi.Size()
  external int size;

  external ffi.Pointer<ffi.Void> ctx;

  static ffi.Pointer<guatiao_object> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Void> table,
    required int size,
    required ffi.Pointer<ffi.Void> ctx,
  }) =>
      $allocator<guatiao_object>()
        ..ref.table = table
        ..ref.size = size
        ..ref.ctx = ctx;
}

final class guatiao_payload extends ffi.Union {
  @ffi.Bool()
  external bool b;

  external guatiao_string text;

  external guatiao_number number;

  external guatiao_buffer bytes;

  external guatiao_list list;

  external guatiao_map map;
}

final class guatiao_provider_error extends ffi.Struct {
  @guatiao_status$1()
  external int status;

  external guatiao_string message;
}

final class guatiao_provider_info extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int vtable_size;

  external guatiao_kinds kinds;

  external guatiao_str id;

  external guatiao_str display_name;

  external ffi.Pointer<guatiao_value> config;

  external ffi.Pointer<ffi.Void> vtable;

  external ffi.Pointer<ffi.Void> ctx;

  external guatiao_map_ptr meta;

  external guatiao_str version;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Bool Function(
                  ffi.Pointer<ffi.Void> ctx, ffi.Pointer<guatiao_str> reason)>>
      available;

  external guatiao_kind_tables tables;

  external ffi.Pointer<
      ffi.NativeFunction<
          guatiao_status$1 Function(
              ffi.Pointer<ffi.Void> ctx,
              ffi.Pointer<guatiao_value> config,
              ffi.Pointer<ffi.Pointer<ffi.Void>> out,
              ffi.Pointer<guatiao_provider_error> err)>> create;

  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<ffi.Void> ctx, ffi.Pointer<ffi.Void> instance)>>
      destroy;
}

final class guatiao_providers extends ffi.Struct {
  external ffi.Pointer<guatiao_provider_info> ptr;

  @ffi.Size()
  external int len;

  @ffi.Size()
  external int stride;

  static ffi.Pointer<guatiao_providers> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<guatiao_provider_info> ptr,
    required int len,
    required int stride,
  }) =>
      $allocator<guatiao_providers>()
        ..ref.ptr = ptr
        ..ref.len = len
        ..ref.stride = stride;
}

final class guatiao_registry extends ffi.Opaque {}

enum guatiao_status {
  GUATIAO_OK(0),
  GUATIAO_ERR_BAD_VALUE(7),
  GUATIAO_ERR_ALLOC(8),
  GUATIAO_ERR_WRONG_KIND(9),
  GUATIAO_ERR_NOT_FOUND(10),
  GUATIAO_ERR_NULL(11),
  GUATIAO_ERR_GONE(12),
  GUATIAO_ERR_UNSUPPORTED(13),
  GUATIAO_ERR_BUSY(14),
  GUATIAO_ERR_INTERNAL(100);

  final int value;
  const guatiao_status(this.value);

  static guatiao_status fromValue(int value) => switch (value) {
        0 => GUATIAO_OK,
        7 => GUATIAO_ERR_BAD_VALUE,
        8 => GUATIAO_ERR_ALLOC,
        9 => GUATIAO_ERR_WRONG_KIND,
        10 => GUATIAO_ERR_NOT_FOUND,
        11 => GUATIAO_ERR_NULL,
        12 => GUATIAO_ERR_GONE,
        13 => GUATIAO_ERR_UNSUPPORTED,
        14 => GUATIAO_ERR_BUSY,
        100 => GUATIAO_ERR_INTERNAL,
        _ => throw ArgumentError('Unknown value for guatiao_status: $value'),
      };
}

typedef guatiao_status$1 = ffi.Uint32;
typedef Dartguatiao_status = int;

final class guatiao_str extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Size()
  external int len;

  static ffi.Pointer<guatiao_str> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> ptr,
    required int len,
  }) =>
      $allocator<guatiao_str>()
        ..ref.ptr = ptr
        ..ref.len = len;
}

final class guatiao_string extends ffi.Struct {
  external ffi.Pointer<ffi.Uint8> ptr;

  @ffi.Size()
  external int len;

  @ffi.Size()
  external int cap;

  external ffi.Pointer<guatiao_alloc> alloc;

  static ffi.Pointer<guatiao_string> $allocate(
    ffi.Allocator $allocator, {
    required ffi.Pointer<ffi.Uint8> ptr,
    required int len,
    required int cap,
    required ffi.Pointer<guatiao_alloc> alloc,
  }) =>
      $allocator<guatiao_string>()
        ..ref.ptr = ptr
        ..ref.len = len
        ..ref.cap = cap
        ..ref.alloc = alloc;
}

enum guatiao_tag {
  GUATIAO_ABSENT(0),
  GUATIAO_NULL(1),
  GUATIAO_BOOL(2),
  GUATIAO_NUMBER(3),
  GUATIAO_STRING(4),
  GUATIAO_BYTES(5),
  GUATIAO_LIST(6),
  GUATIAO_MAP(7);

  final int value;
  const guatiao_tag(this.value);
